force-app/main/default/objects/JIRA_Coupon_Item__c/JIRA_Coupon_Item__c.object-meta.xml
<CustomObject>
    <label>Coupon Item  --JIRA</label>
    <nameField>
        <displayFormat>CLS{0000}</displayFormat>
        <label>Coupon Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Items  --JIRA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>