force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Global_Quota__c.field-meta.xml
<CustomField>
    <fullName>Global_Quota__c</fullName>
    <label>Global Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>