force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Initial_Balance__c.field-meta.xml
<CustomField>
    <fullName>Initial_Balance__c</fullName>
    <label>Initial Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>