force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample1</fullName>
            </value>
            <value>
                <fullName>Sample2</fullName>
            </value>
            <value>
                <fullName>Sample3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>