force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Member_get_Member__c.field-meta.xml
<CustomField>
    <fullName>Member_get_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member-get-Member</label>
    <type>Checkbox</type>
</CustomField>