force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Member_get_Member_Quota__c.field-meta.xml
<CustomField>
    <fullName>Member_get_Member_Quota__c</fullName>
    <label>Member-get-Member Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>