force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Minimal_Spending__c.field-meta.xml
<CustomField>
    <fullName>Minimal_Spending__c</fullName>
    <label>Minimal Spending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>