force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Minimum_Amount_Per_Use__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount_Per_Use__c</fullName>
    <label>Minimum Amount Per Use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>