force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Product_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Product_JIRA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product  --JIRA</label>
    <referenceTo>Product_JIRA__c</referenceTo>
    <relationshipLabel>Coupon Items  --JIRA</relationshipLabel>
    <relationshipName>Coupon_Items_JIRA</relationshipName>
    <type>Lookup</type>
</CustomField>