force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <label>Terms and Conditions</label>
    <length>200</length>
    <type>Text</type>
</CustomField>