force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Use_Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Use_Remaining_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Remaining Balance</label>
    <type>Checkbox</type>
</CustomField>