force-app/main/default/objects/JIRA_Coupon_Item__c/fields/Valid_Period_Length__c.field-meta.xml
<CustomField>
    <fullName>Valid_Period_Length__c</fullName>
    <label>Valid Period Length</label>
    <type>Date</type>
</CustomField>