force-app/main/default/objects/JIRA_Coupon_Item__c/recordTypes/Free_Commodity_Item.recordType-meta.xml
<RecordType>
    <fullName>Free_Commodity_Item</fullName>
    <active>true</active>
    <description>Free Commodity Item(s) (defined in coupon item) is given when the coupon is presented.</description>
    <label>Free Commodity Item</label>
</RecordType>